# CS-Algo-Playground

./: README.md
DBMS/RDB-Normalization/: CMakeLists.txt  README.md  build.sh
DBMS/RDB-Normalization/app/: CMakeLists.txt  main.cpp
DBMS/RDB-Normalization/include/: attribute_set.hpp  database.hpp  dependency.hpp  dependency_set.hpp  normalizer.hpp  parser.hpp  schema.hpp  utils.hpp
DBMS/RDB-Normalization/src/: CMakeLists.txt  attribute_set.cpp  database.cpp  dependency.cpp  dependency_set.cpp  normalizer.cpp  parser.cpp  schema.cpp  utils.cpp
DBMS/RDB-Normalization/test/: CMakeLists.txt  attribute_set_test.hpp  normalizer_test.hpp  schema_test.hpp  test.cpp
